--- a/.github/workflows/actions-deploy-cv.yml
+++ b/.github/workflows/actions-deploy-cv.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
-          path: dist
+          path: ./
   deploy:
     needs: build
     runs-on: ubuntu-latest
