--- a/.github/workflows/actions-deploy-cv.yml
+++ b/.github/workflows/actions-deploy-cv.yml
@@ -29,17 +29,17 @@ jobs:
         with:
           name: dist-files
           path: ./
-      # - name: Output contents
-      #   run: ls
-      # - name: Deploy site
-      #   id: deploy
-      #   uses: ./.github/actions/deploy-s3-javascript
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #   with:
-      #     bucket: gh-custom-action-static-website-eros
-      #     bucket-region: us-east-1
-      #     dist-folder: ./dist
-      # - name: Output website url
-      #   run: echo ${{ steps.deploy.outputs.website-url }}
+      - name: Output contents
+        run: ls
+      - name: Deploy site
+        id: deploy
+        uses: ./.github/actions/deploy-s3-javascript
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        with:
+          bucket: gh-custom-action-static-website-eros
+          bucket-region: us-east-1
+          dist-folder: ./
+      - name: Output website url
+        run: echo ${{ steps.deploy.outputs.website-url }}
