--- a/.github/workflows/actions-deploy-cv.yml
+++ b/.github/workflows/actions-deploy-cv.yml
@@ -38,7 +38,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         with:
-          bucket: gh-custom-action-static-website-eros
+          bucket: eroskoller.com
           bucket-region: us-east-1
           dist-folder: ./
       - name: Output website url
